<resources>
    <string name="app_name">New York Times</string>
    <string name="share_link_button">Share Link</string>
    <string name="filters_header">Filters</string>
    <string name="begin_date">Begin date</string>
    <string name="end_date">End date</string>
    <string name="sort_label">Sort</string>
    <string name="news_desk_label">News Desk</string>
    <string name="filter">Filter</string>

    <!-- Internet check -->
    <string name="no_internet">No internet connection</string>
    <string name="retry">Retry</string>
    <string name="tour_welcome">Welcome!</string>
    <string name="tour_cta">Click on the looking glass and type a search query to begin</string>
</resources>
